[gd_scene load_steps=18 format=2]

[ext_resource path="res://RoadLayoutScript.gd" type="Script" id=1]
[ext_resource path="res://HUD/Camera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environment/Humvee.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Construction/Buildings/stonewall.png" type="Texture" id=4]
[ext_resource path="res://FPSlabel.gd" type="Script" id=6]
[ext_resource path="res://TheRoadLevel.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Environment/EnvironmentTileset.png" type="Texture" id=8]
[ext_resource path="res://HealthSystem.gd" type="Script" id=9]
[ext_resource path="res://Sprites/Environment/ScenicFeatures.png" type="Texture" id=10]
[ext_resource path="res://HUD/Menu/Cursor.tscn" type="PackedScene" id=11]
[ext_resource path="res://TileMap.gd" type="Script" id=12]
[ext_resource path="res://HUD/ConstructionButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://HUD/InventoryHUD.tscn" type="PackedScene" id=16]
[ext_resource path="res://HUD/WeaponInfo.tscn" type="PackedScene" id=17]

[sub_resource type="TileSet" id=1]
0/name = "EnvironmentTileset.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "EnvironmentTileset.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "EnvironmentTileset.png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 32, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "EnvironmentTileset.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "EnvironmentTileset.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "ScenicFeatures.png 0"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "ScenicFeatures.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "ScenicFeatures.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 32, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "stonewall.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[node name="TheRoadLevel" type="Node2D"]
pause_mode = 1
script = ExtResource( 7 )

[node name="RoadLayoutScript" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 12 )

[node name="Scenery" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Buildings" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="RoadChunks" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="InventoryHUD" parent="CanvasLayer" instance=ExtResource( 16 )]

[node name="WeaponInfo" parent="CanvasLayer" instance=ExtResource( 17 )]

[node name="ConstructionButton" parent="CanvasLayer" instance=ExtResource( 15 )]

[node name="Cursor" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="HealthSystem" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 9 )

[node name="FPSlabel" type="Label" parent="CanvasLayer"]
visible = false
margin_top = 16.0
margin_right = 40.0
margin_bottom = 30.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" parent="." instance=ExtResource( 2 )]

[node name="WorldBoundaries" type="Node2D" parent="."]

[node name="PathNodes" type="Node2D" parent="."]

[node name="Humvee" parent="." instance=ExtResource( 3 )]
position = Vector2( 147, 55 )
state = 1
